--- a/famcare_automation/pom.xml
+++ b/famcare_automation/pom.xml
@@ -21,6 +21,14 @@
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.9.1</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <pluginRepositories>
@@ -64,11 +72,20 @@
             <version>1.1</version>
         </dependency>
         <dependency>
+            <groupId>io.appium</groupId>
+            <artifactId>java-client</artifactId>
+            <version>7.2.0</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-chrome-driver</artifactId>
+            <artifactId>selenium-api</artifactId>
             <version>3.141.59</version>
             <type>jar</type>
         </dependency>
+
+     
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -81,31 +98,28 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
+
+    
+
+        <!--<dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+        </dependency>-->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-api</artifactId>
-            <version>3.141.59</version>
+            <version>4.0.0-rc-2</version>
+            <scope>test</scope>
             <type>jar</type>
         </dependency>
-        <!--  <dependency>
-         <groupId>org.seleniumhq.selenium</groupId>
-         <artifactId>selenium-chrome-driver</artifactId>
-         <version>3.141.59</version>
-         <scope>test</scope>
-         <type>jar</type>
-        </dependency>-->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-support</artifactId>
-            <version>3.141.59</version>
+            <artifactId>selenium-remote-driver</artifactId>
+            <version>4.0.0-rc-2</version>
+            <scope>test</scope>
             <type>jar</type>
         </dependency>
-        <!--  <dependency>
-         <groupId>org.seleniumhq.selenium</groupId>
-         <artifactId>selenium-remote-driver</artifactId>
-         <version>3.141.59</version>
-         <type>jar</type>
-        </dependency>-->
     </dependencies>
     <name>Famcare Automation Test</name>
 
