--- a/famcare_automation/pom.xml
+++ b/famcare_automation/pom.xml
@@ -78,12 +78,12 @@
             <scope>test</scope>
             <type>jar</type>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-api</artifactId>
             <version>3.141.59</version>
             <type>jar</type>
-        </dependency>
+        </dependency>-->
 
      
         <dependency>
@@ -106,7 +106,7 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>3.0.0-M5</version>
         </dependency>-->
-        <dependency>
+<!--        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-api</artifactId>
             <version>4.0.0-rc-2</version>
@@ -119,7 +119,7 @@
             <version>4.0.0-rc-2</version>
             <scope>test</scope>
             <type>jar</type>
-        </dependency>
+        </dependency>-->
     </dependencies>
     <name>Famcare Automation Test</name>
 
